--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "sass": "^1.72.0"
