--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "prop-types": "^15.8.1",
+    "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
