--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "react-scroll": "^1.9.0",
     "react-spinners": "^0.13.8",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
