--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-js-pagination": "^3.0.3",
     "react-mathquill": "^1.0.3",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.1",
